[package]
name = "rp2040-usb"
version = "0.1.0"
edition = "2021"

[features]
default = ["target-pico"]
target-pico = []
target-feather = []

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6.13"
rp2040-pac = {version = "0.3", features = ["rt"]}
panic-halt = "0.2"
rp2040-boot2 = "0.2"
cfg-if = "1"
zerocopy = "0.6"
byteorder = {version = "1.4", default-features = false}
num-traits = {version = "0.2", default-features = false}
num-derive = "0.3"

# This is just here so RLS works.
[[bin]]
name = "rp2040-usb"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
